<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">R4D2</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Address</string>
    <string name="address">Address  </string>
    <string name="edit_port">Port</string>
    <string name="port">Port  </string>
    <string name="edit_delay">Delay</string>
    <string name="delay">Delay (ms) </string>
    <string name="button_send">Send</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_activity_display_message">Rooms</string>
    <string name="hello_world">Hello world!</string>
 	<string name="rectangle">rectangle</string>
 	<string name="sensorId1">ID: 1</string>
 	<string name="sensorId2">ID: 2</string>
 	<string name="sensorId3">ID: 3</string>
 	<string name="sensorId4">ID: 4</string>
 	<string name="sensorTimeStamp">TS: ???</string>
 	<string name="sensorValue">Value: ???</string>
 	<string name="errorTitleHost">Connexion problem</string>
 	<string name="errorMessageHost">Connexion problem</string>
</resources>
